# MLP-project

./: .gitignore  README.md  demo-buldozers.py  demo.py  demo_course example.py  environment.yaml  pyproject.toml
notebooks/: Data loading and preprocessing.ipynb  Vehicle crashes dataset.ipynb
src/maincode/: custom_functions.py
