[tool.poetry]
name = "mlp-project-main-2"
version = "0.1.0"
description = ""
authors = ["Sofia-kokurusha"]
readme = "README.md"
packages = [{include="ecolyon", from= "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
